<resources>
    <string name="app_name">Sample Tiki</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Mobile phone number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone numbers is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_in_if_have_account">Have an account click here to sign in</string>
    <string name="action_register_new_account">Register new Account</string>
    <string name="state_register_new_account">Register new Account</string>
    <string name="state_sign_in_account">Sign in</string>
    <string name="login_successful">Welcome </string>
    <string name="action_press_to_log_out">Press to log out</string>
</resources>
